<resources>
    <string name="app_name">Brokerage</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum_desc">"is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, "</string>
    <string name="lang_label">العربيه</string>
    <string name="lang_eng_label" translatable="false">English</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome_back2">Login to your existing account.</string>


    <!-- non translatable keys -->

    <string name="ar_lang_key" translatable="false">ar</string>
    <string name="en_lang_key" translatable="false">en</string>
    <string name="lang_dialog_message">هل تريد تغيير لغة التطبيق الي العربيه ؟</string>
    <string name="lang_dialog_confirm">موافق</string>
    <string name="lang_dialog_cancel">الغاء</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_label">Did you forgot your password ? </string>
    <string name="reset_password"> Reset password</string>
    <string name="login">Login</string>
    <string name="login_with">Login with</string>
    <string name="new_account_label">Don\'t have an account yet ? </string>
    <string name="create_account">Create account</string>
    <string name="login_fragment">Login</string>
    <string name="fragment_register">Register</string>
    <string name="fragment_forget_password">Forget Password</string>
    <string name="forgot_label1">Forgot your account password!</string>
    <string name="forgot_label2">No problem enter your email address to verify your account</string>
    <string name="forgot_label3">we will email instructions on how to reset your password.</string>
    <string name="get_started_now">Get started now!</string>
    <string name="get_started2">Create an account to get started.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password_condition">Password should contain at least one character and at least one number</string>
    <string name="terms_label">I have read and accept </string>
    <string name="terms_conditions"><![CDATA[The terms & Conditions]]></string>
    <string name="signup">Sign up</string>
    <string name="first_name_error">Please enter first name</string>
    <string name="last_name_error">Please enter lsat name</string>
    <string name="email_error">Please enter email correctly</string>
    <string name="password_error">Please enter password correctly</string>
    <string name="register_error">Please fulfill all fields!</string>
    <string name="terms_error">Please accept terms and conditions</string>
    <string name="mobile_error">Please add mobile number proprley</string>
    <string name="home">Home</string>
    <string name="renewal">Renewal</string>
    <string name="claims">Claims</string>
    <string name="medical">Medical</string>
    <string name="services">Services</string>
    <string name="user_name">User name</string>
    <string name="view_profile">View profile</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="drawer_open" translatable="false">Drawer open</string>
    <string name="drawer_close" translatable="false">Drawer close</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="press_to_refresh">Press to refresh</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="login_with_go">Login with Google</string>
    <string name="fulfil_fields">Please fulfill all fields!</string>
    <string name="soon">Soon</string>
    <string name="service1">Car insurance</string>
    <string name="service2">Life insurance</string>
    <string name="service3">Travel insurance</string>
    <string name="service4">Home insurance</string>
    <string name="service5">Medical insurance</string>
    <string name="service6">Critical Illness Insurance</string>
    <string name="service7">Yacht insurance</string>
    <string name="service8">Marine insurance</string>
    <string name="service9">Inland insurance</string>
    <string name="service10">Life insurance individual</string>
    <string name="service11">Personal Accident</string>
    <string name="email_sent">Reset email sent</string>
    <string name="email_error_occured">Some error occurred</string>

</resources>