<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.polotika.brokerage.ui.register.RegisterViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="30dp"
            tools:context=".RegisterFragment">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/getStarted_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started_now"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/getStarted_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started2"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/getStarted_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstName_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/first_name"
                app:layout_constraintTop_toBottomOf="@id/getStarted_label2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName_tie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={vm.firstName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastName_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/last_name"
                app:layout_constraintTop_toBottomOf="@id/firstName_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName_tie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@={vm.lastName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/mobile_number"
                app:layout_constraintTop_toBottomOf="@id/lastName_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile_tie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:text="@={vm.mobileNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/mobile_til">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_tie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/main_blue"
                app:layout_constraintTop_toBottomOf="@id/email_til"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_tie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={vm.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_condition_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/password_condition"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_til" />

            <CheckBox
                android:id="@+id/terms_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_blue"
                android:checked="@={vm.isChecked}"
                android:text="@string/terms_label"
                app:layout_constraintEnd_toStartOf="@id/terms_tv"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_condition_label" />

            <TextView
                android:id="@+id/terms_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_conditions"
                android:textColor="@color/main_blue"
                app:layout_constraintBottom_toBottomOf="@id/terms_cb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/terms_cb"
                app:layout_constraintTop_toTopOf="@id/terms_cb" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/main_blue"
                android:onClick="@{()->vm.register()}"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/terms_cb" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>