<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.polotika.brokerage.ui.login.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="30dp"
            android:paddingVertical="24dp"
            android:layout_gravity="center"
            tools:context=".ui.login.LoginFragment">

            <TextView
                android:id="@+id/language_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="2dp"
                android:elevation="16dp"
                android:text="@string/lang_label"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/welcome_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/welcome_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cairo"
                android:text="@string/welcome_back2"
                android:textSize="18sp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_label" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                app:endIconDrawable="@drawable/ic_check_circle"
                app:endIconMode="custom"
                app:layout_constraintTop_toBottomOf="@id/welcome_label2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                app:endIconDrawable="@drawable/ic_check_circle"
                app:endIconMode="custom"
                app:layout_constraintTop_toBottomOf="@id/til_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/forgot_label"
                android:textColor="@color/grey"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                app:layout_constraintEnd_toStartOf="@id/forget_tv"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                />

            <TextView
                android:id="@+id/forget_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/reset_password"
                goToForgetPassword="@{true}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/forget_label"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                android:textColor="@color/main_blue"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            />


            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                app:layout_constraintTop_toBottomOf="@id/forget_tv"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:onClick="@{()->vm.login()}"
                android:backgroundTint="@color/main_blue"
            />

            <Button
                android:id="@+id/login_fb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_go"
                android:drawableEnd="@drawable/ic_facebook"
                android:layout_marginEnd="5dp"
                android:text="@string/login_with"
                android:textAllCaps="false"
                android:backgroundTint="@color/main_blue"
            />

            <Button
                android:id="@+id/login_go"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp"
                app:layout_constraintTop_toBottomOf="@id/login_btn"
                app:layout_constraintStart_toEndOf="@id/login_fb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginStart="5dp"
                android:text="@string/login_with"
                android:drawableEnd="@drawable/ic_google"
                android:textAllCaps="false"
                android:backgroundTint="@color/main_blue"
            />


            <TextView
                android:id="@+id/new_account_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/new_account_label"
                android:textColor="@color/grey"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                app:layout_constraintEnd_toStartOf="@id/create_account_tv"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_fb"
                app:layout_constraintBottom_toBottomOf="parent"
            />

            <TextView
                android:id="@+id/create_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                goToRegister="@{true}"
                android:text="@string/create_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/new_account_label"
                app:layout_constraintTop_toBottomOf="@id/login_fb"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/main_blue"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>