<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_nav"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.polotika.brokerage.ui.login.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_forgetPasswordFragment"
            app:destination="@id/forgetPasswordFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.polotika.brokerage.ui.register.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/forgetPasswordFragment"
        android:name="com.polotika.brokerage.ui.forget.ForgetPasswordFragment"
        android:label="@string/fragment_forget_password"
        tools:layout="@layout/fragment_forget_password" />
</navigation>